# anonymize-calendar

./: Dockerfile  README.md  dev.tfvars  main.tf  prod.tfvars  variables.tf
app/: Dockerfile  README.md  pyproject.toml
app/src/anonymize_calendar/: __init__.py  app.py
app/src/anonymize_calendar/static/: hash_generator.html
infra/: README.md
infra/modules/artifact_registry/: main.tf  outputs.tf  variables.tf
infra/modules/cloudbuild/: main.tf  outputs.tf  variables.tf
infra/modules/cloudrun/: main.tf  outputs.tf  variables.tf
infra/prod/: cloudbuild.tf  cloudrun.tf  main.tf  outputs.tf  variables.tf
modules/compute/: main.tf  outputs.tf  variables.tf
modules/network/: main.tf  outputs.tf  variables.tf
src/anonymize_calendar/: app.py
