[project]
name = "anonymize-calendar"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Mitsuki Ogasahara", email = "negiga@gmail.com" }
]
dependencies = [
    "fastapi>=0.111.0",
    "icalendar>=5.0.12",
    "httpx>=0.27.0",
    "google-api-python-client>=2.134.0",
    "google-auth>=2.30.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/anonymize_calendar"]

[tool.rye.scripts]
dev = "fastapi dev src/anonymize_calendar"
server = "fastapi run src/anonymize_calendar"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
